--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,6 +4,11 @@
 		<item name="android:colorPrimary">@color/colorPrimary</item>
 		<item name="android:colorPrimaryDark">@color/colorPrimaryDark</item>
 		<item name="android:colorAccent">@color/colorAccent</item>
+		<item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
+	</style>
+
+	<style name="AppTheme.Fullscreen" parent="android:Theme.Material.Light.NoActionBar.Fullscreen">
+		<item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
 	</style>
 
 </resources>
