--- a/libraries/MaterialPreference/src/main/res/layout/preference_recyclerview.xml
+++ b/libraries/MaterialPreference/src/main/res/layout/preference_recyclerview.xml
@@ -15,7 +15,7 @@
   ~ limitations under the License
   -->
 
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<rikka.materialpreference.view.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/list"
     style="?attr/preferenceFragmentListStyle"
     android:layout_width="match_parent"
