--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color name="colorPrimary">#3F51B5</color>
-	<color name="colorPrimaryDark">#303F9F</color>
+	<color name="colorPrimary">#6f31bf</color>
+	<color name="colorPrimaryDark">#5e21ac</color>
 	<color name="colorAccent">#FF4081</color>
 
 	<color name="grey_50">#FAFAFA</color>
